# release-gate-agent

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  PLAN.md  README.md  background.md  docker-compose.yml  pyproject.toml
policies/: harness.rego  release_policy.yaml
prompts/: risk_classifier.md
services/dolt/: Dockerfile  init.sh
services/governance/: Dockerfile  requirements.txt  server.py
services/validator_server/: Dockerfile  requirements.txt  server.py
stub_servers/: Dockerfile.stub  coverage_server.py  linter_server.py
tests/: conftest.py  helpers.py
tests/eval/: test_eval_suite.py
tests/eval/fixtures/: scenario_allow_boundary_coverage.yaml  scenario_allow_boundary_diff.yaml  scenario_allow_clean.yaml  scenario_block_critical_lint.yaml  scenario_block_diff_too_large.yaml  scenario_block_low_coverage.yaml  scenario_block_multi_vector.yaml  scenario_block_prohibited_dir.yaml  scenario_escalate_high_risk.yaml
tests/integration/: test_validator_integration.py
tests/unit/: test_agent.py  test_checker.py  test_classifier.py  test_client.py  test_governance_server.py  test_llm.py  test_policy_loader.py
